revised html code

--- a/index.html
+++ b/index.html
@@ -2,31 +2,35 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8">
-    <title>Student Bio</title>
+    <title>Student Bio With Attributes</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
   </head>
+
+
+
   <body>
     <header>
       <!-- Headers -->
-       <h1>Student Bio</h1>
-      <h2>Adriana Hernandez</h2>
+      <h1 class="title">Student Bio</h1>
     </header>
-    <section>
-      <!-- Image -->
-      <img src="https://avatars.githubusercontent.com/u/175578779?v=4" alt="placeholder image"/>
-      <!-- Paragraph -->
-      <p>I randomly stumbled upon GitHub one day when I was bored at home and started teaching myself coding. I played around with it alot and found that this course might be for me. Looking forward to learning a lot more.</p>
-    
-       <!-- Unordered list -->
-      <header>
-        <h2>Contact Info</h2>
-      </header>
-      <ul>
-        <li><strong>Email:</strong> <a href="#">adrianahernandez109@gmail.com</a></li>
-        <li><strong>Github:</strong> <a href="#">github.com/herna27</a></li>
-        <li><strong>Portfolio:</strong> <a href="#">Coming soon!</a></li>
-      </ul>
-      <!-- Link -->
-      <a href="https://www.google.com">This is a link to Google.com</a>
-    </section>
-  </body>
-</html>
+
+      <section>
+        <h2 class="title">Adriana Hernandez</h2>
+        <!-- TODO: modify img attributes -->
+        <img src="./assets/image-1.jpg" alt="Adriana Hernandez" />
+        <p>I randomly stumbled upon GitHub one day when I was bored at home and started teaching myself coding. I played around with it alot and found that this course might be for me. Looking forward to learning a lot more.</p>
+      </section>
+      <!-- TODO: add class attribute -->
+      <section>
+        <h2 class="title">Contact Info</h2>
+        <ul>
+          <!-- TODO: add id attribute -->
+          <li><strong>Email:</strong> <a href="#">adrianahernandez109@gmail.com</a></li>
+          <!-- TODO: add id attribute -->
+          <li><strong>Github:</strong> <a href="#">herna27</a></li>
+          <!-- TODO: add id attribute -->
+          <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
+        </ul>
+      </section>
+    </body>
+  </html>
